--- a/site/src/app/payment/payment.component.less
+++ b/site/src/app/payment/payment.component.less
@@ -2,26 +2,57 @@
   width: 100%;
 }
 
+.payment-header {
+  min-width: 120px;
+  margin: 32px auto 0;
+  width: 390px;
+  display: flex;
+  align-items: center;
+  padding: 16px 0;
+  justify-content: center;
+}
+
+.payment-success {
+  min-width: 120px;
+  margin: 16px auto;
+  width: 390px;
+  display: flex;
+  align-items: center;
+  padding: 16px 0 0;
+  justify-content: center;
+  background-color: #21a038;
+  color: #fff;
+  text-align: center;
+}
+
 .payment-form {
   min-width: 120px;
-  margin: 20px auto;
+  margin: 16px auto;
   width: 390px;
-  background-color: #E6E6E6;
+
+  &-header-image {
+    background-image: url('/assets/icons/lock.svg');
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: center;
+    border: 2px solid #21a038;
+  }
 
   &-footer {
     color: #989898;
     font-size: 11px;
     line-height: 13px;
     margin: 10px 0;
-  }
-}
+    text-align: center;
 
-.payment-form-header-image {
-  background-image: url('/assets/icons/lock.svg');
-  background-repeat: no-repeat;
-  background-size: 50%;
-  background-position: center;
-  border: 2px solid #ffd740;
+    a {
+      color: #21a038;
+    }
+  }
+
+  .mat-raised-button.mat-primary {
+    background-color: #21a038;
+  }
 }
 
 .card-type {
