--- a/site/src/app/main-page/main-page.component.less
+++ b/site/src/app/main-page/main-page.component.less
@@ -51,16 +51,21 @@
   }
 
   &-heading {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     margin-top: 0;
     position: relative;
-    font-size: 30px;
+    font-size: 18px;
     font-weight: 400;
     text-transform: uppercase;
     letter-spacing: 0.5em;
     line-height: 1.8;
     opacity: .9;
     text-transform: uppercase;
+
+    @media(min-width: 600px) {
+      font-size: 30px;
+      margin-bottom: 50px;  
+    }
   }
 
   &-text {
