Frontend: Правки главной страницы

--- a/site/src/app/main-page/main-page.component.less
+++ b/site/src/app/main-page/main-page.component.less
@@ -37,7 +37,7 @@
     background-color: #f4f4f4;
     background-image: url(/assets/images/section-bg-5.jpg);
     background-position: 50% 0px;
-    height: calc(100% - 64px);
+    height: 100vh;
   }
 
   &-container {
