--- a/site/src/app/payment/payment.component.less
+++ b/site/src/app/payment/payment.component.less
@@ -18,7 +18,7 @@
   width: 390px;
   display: flex;
   align-items: center;
-  padding: 16px 0 0;
+  padding: 16px 0;
   justify-content: center;
   background-color: #21a038;
   color: #fff;
